fixed horizontal overflow, minimum-scale=1

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,14 +39,14 @@ body {
   overflow-x: hidden;
 }
 
-* {
-  outline: 1px solid #ff009926;
-}
-
+/* *{
+    outline: 1px solid #ff009926;
+} */
 @media all and (min-width: 992px) {
   .navbar .nav-item .dropdown-menu {
     display: none;
   }
+  /* .navbar .nav-item:hover .nav-link{   } */
   .navbar .nav-item:hover .dropdown-menu {
     display: block;
   }
@@ -91,9 +91,6 @@ body {
   }
 }
 
-/* .tempnavbar{
-	position: absolute !important;
-} */
 .logo {
   width: 140px;
 }
@@ -155,15 +152,16 @@ body {
   }
 }
 
-/* .customNavbar:first-child{
-	align-self: ;
-} */
 @media (min-width: 576px) {
   .navbarCollapse {
     display: flex !important;
     flex-direction: row !important;
     align-items: center !important;
   }
+}
+
+.dropdown-toggle::after {
+  opacity: 0 !important;
 }
 
 .bg-grey {
